--- a/package.json
+++ b/package.json
@@ -61,7 +61,10 @@
 		"query-string": "^7.0.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-icons": "^5.3.0",
 		"react-polyfills": "0.0.1",
-		"react-router": "^6.0.2"
+		"react-router": "^6.0.2",
+		"react-router-dom": "^6.26.0",
+		"typewriter-effect": "^2.21.0"
 	}
 }
